--- a/.gitignore
+++ b/.gitignore
@@ -3,14 +3,21 @@
 .run/
 
 # variable resources
-resources/playbook/site.yml
+resources/playbook/ansible.cfg
+resources/playbook/roles/bibigrid/templates/slurm/slurm.j2
+resources/playbook/site.yaml
 resources/playbook/ansible_hosts
 resources/playbook/vars/
 resources/playbook/host_vars/
 resources/playbook/group_vars/
-tests/resources/*
-!test/resources/test_configuration.yml
+resources/tests/bibigrid_test.yaml
 
+# Roles
+resources/playbook/roles_galaxy/*
+!resources/playbook/roles_galaxy/README
+resources/playbook/roles_user/*
+!resources/playbook/roles_user/README
+!resources/playbook/roles_user/resistance_nextflow
 # any log files
 *.log
 log/
