--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,19 @@
 openstacksdk==0.62
-mergedeep
-paramiko
+mergedeep~=1.3.4
+paramiko~=2.12.0
 python-cinderclient
 python-keystoneclient
 python-novaclient
 python-openstackclient==6.0.0
-PyYAML
-shortuuid
-sshtunnel
-sympy
-seedir
+PyYAML~=6.0
+shortuuid~=1.0.11
+sshtunnel~=0.4.0
+sympy~=1.12
+seedir~=0.4.2
+cryptography~=38.0.4
+uvicorn~=0.23.2
+fastapi~=0.101.0
+pydantic~=2.1.1
+keystoneauth1~=5.1.0
+filelock~=3.13.1
+schema~=0.7.7
