--- a/requirements-rest.txt
+++ b/requirements-rest.txt
@@ -1,14 +1,14 @@
 openstacksdk==0.62
-mergedeep
-paramiko
+mergedeep~=1.3.4
+paramiko~=3.4.0
 python-cinderclient
 python-keystoneclient
 python-novaclient
 python-openstackclient==6.0.0
-PyYAML
-shortuuid
-sshtunnel
-fastapi
+PyYAML~=6.0
+shortuuid~=1.0.13
+sshtunnel~=0.4.0
+fastapi~=0.113.0
 python-multipart
-uvicorn
+uvicorn~=0.23.2
 httpx
