moved openstack credentials permission change to server only

--- a/resources/playbook/roles/bibigrid/tasks/042-slurm-server.yaml
+++ b/resources/playbook/roles/bibigrid/tasks/042-slurm-server.yaml
@@ -1,3 +1,9 @@
+- name: Change group ownership of OpenStack credentials file to slurm
+  file:
+    path: /etc/openstack/clouds.yaml
+    group: slurm
+    mode: '0640'  # (owner can read/write, group can read, others have no access)
+
 - name: Create slurm db
   mysql_db:
     name: "{{ slurm_conf.db }}"
