--- a/resources/playbook/roles/bibigrid/tasks/020-disk-server-automount.yaml
+++ b/resources/playbook/roles/bibigrid/tasks/020-disk-server-automount.yaml
@@ -21,7 +21,7 @@
       file:
         path: "/vol/{{ item.mount_point }}"
         state: directory
-        mode: '0755'
+        mode: 0o755
         owner: root
         group: '{{ ansible_distribution | lower }}'
 
