--- a/resources/playbook/roles/bibigrid/tasks/042-slurm-server.yaml
+++ b/resources/playbook/roles/bibigrid/tasks/042-slurm-server.yaml
@@ -2,7 +2,7 @@
   file:
     path: /etc/openstack/clouds.yaml
     group: slurm
-    mode: '0640'  # (owner can read/write, group can read, others have no access)
+    mode: 0o640  # (owner can read/write, group can read, others have no access)
 
 - name: Create slurm db
   mysql_db:
@@ -24,7 +24,7 @@
     dest: /etc/slurm/slurmdbd.conf
     owner: slurm
     group: root
-    mode: "0600"
+    mode: 0o600
 
 - name: Generate random JWT Secret
   command:
@@ -36,7 +36,7 @@
     path: /etc/slurm/jwt-secret.key
     owner: slurm
     group: slurm
-    mode: "0600"
+    mode: 0o600
 
 - name: Copy env file for configuration of slurmrestd
   copy:
@@ -44,14 +44,14 @@
     dest: /etc/default/slurmrestd
     owner: root
     group: root
-    mode: "0644"
+    mode: 0o644
 
 - name: Create system overrides directories (slurmdbdm slurmrestd)
   file:
     path: "/etc/systemd/system/{{ item }}.service.d"
     group: root
     owner: root
-    mode: "0755"
+    mode: 0o755
     state: directory
   with_items:
     - slurmdbd
@@ -61,7 +61,7 @@
   copy:
     src: "slurm/systemd/{{ item }}.override"
     dest: "/etc/systemd/system/{{ item }}.service.d/override.conf"
-    mode: "0644"
+    mode: 0o644
     owner: root
     group: root
   with_items:
@@ -81,13 +81,13 @@
     group: ansible
     path: /opt/slurm/
     state: directory
-    mode: "0770"
+    mode: 0o770
 
 - name: Ensures /etc/slurm dir exists
   file:
     path: /etc/slurm/
     state: directory
-    mode: 0755
+    mode: 0o755
 
 - name: Ensures /opt/slurm/.ssh/ dir exists
   file:
@@ -95,7 +95,7 @@
     group: slurm
     owner: slurm
     state: directory
-    mode: 0700
+    mode: 0o700
 
 - name: Copy private key (openstack keypair)
   copy:
@@ -103,7 +103,7 @@
     dest: /opt/slurm/.ssh/id_ecdsa
     owner: slurm
     group: slurm
-    mode: "0600"
+    mode: 0o600
 
 - name: Copy create program script (power)
   copy:
@@ -111,7 +111,7 @@
     dest: /opt/slurm/create.sh
     owner: slurm
     group: ansible
-    mode: "0550"
+    mode: 0o550
 
 - name: Copy terminate program script (power)
   copy:
@@ -119,7 +119,7 @@
     dest: /opt/slurm/terminate.sh
     owner: slurm
     group: ansible
-    mode: "0550"
+    mode: 0o550
 
 - name: Copy fail program script (power)
   copy:
@@ -127,7 +127,7 @@
     dest: /opt/slurm/fail.sh
     owner: slurm
     group: ansible
-    mode: "0550"
+    mode: 0o550
 
 - name: Copy "create_server.py" script
   copy:
@@ -135,7 +135,7 @@
     dest: /usr/local/bin/create_server.py
     owner: slurm
     group: ansible
-    mode: "0750"
+    mode: 0o750
 
 - name: Copy "delete_server.py" script
   copy:
@@ -143,7 +143,7 @@
     dest: /usr/local/bin/delete_server.py
     owner: slurm
     group: ansible
-    mode: "0750"
+    mode: 0o750
 
 - name: Install python dependencies
   pip:
@@ -169,7 +169,7 @@
     dest: "/opt/slurm/userdata_{{ hostvars[item].cloud_identifier }}.txt"
     owner: slurm
     group: ansible
-    mode: "0640"
+    mode: 0o640
   with_items: "{{ groups.vpngtw + groups.master }}"
 
 - name: Enable slurmdbd and slurmrestd services
