--- a/resources/playbook/roles/bibigrid/tasks/011-zabbix-agent.yaml
+++ b/resources/playbook/roles/bibigrid/tasks/011-zabbix-agent.yaml
@@ -11,7 +11,7 @@
   file:
     path: /etc/zabbix/zabbix_agentd.d/
     state: directory
-    mode: 0o755
+    mode: "0o755"
 
 - name: Create zabbix_agent log directory
   file:
@@ -19,20 +19,20 @@
     state: directory
     owner: zabbix
     group: zabbix
-    mode: 0o755
+    mode: "0o755"
 
 - name: Adjust zabbix agent configuration
   template:
     src: zabbix/zabbix_agentd.conf.j2
     dest: /etc/zabbix/zabbix_agentd.conf
-    mode: 0644
+    mode: "0o644"
   notify: zabbix-agent
 
 - name: Copy Zabbix Host delete script
   copy:
     src: zabbix/zabbix_host_delete.py
     dest: /usr/local/bin/zabbix_host_delete.py
-    mode: 0755
+    mode: 0o755"
 
 - name: Install zabbix python-api
   pip:
