--- a/resources/playbook/roles_user/resistance_nextflow/tasks/main.yml
+++ b/resources/playbook/roles_user/resistance_nextflow/tasks/main.yml
@@ -11,8 +11,8 @@
 - name: Install Java JRE on Debian/Ubuntu
   become: True
   apt:
-    name: default-jre  # Package name for Java JRE on Debian-based systems
-    state: present     # Ensure that the package is present, you can use "latest" as well
+    name: default-jre
+    state: present
 
 - name: Get Nextflow
   shell: wget -qO- https://get.nextflow.io | bash
@@ -26,8 +26,8 @@
     group: ubuntu
     mode: '0775'
 
-- name: Execute Nextflow workflow
-  become_user: ubuntu
-  shell: ./nextflow run resFinder.nf -profile slurm
-  args:
-    chdir: "/vol/spool"  # Change to the directory where your workflow resides
+#- name: Execute Nextflow workflow
+#  become_user: ubuntu
+#  shell: ./nextflow run resFinder.nf -profile slurm # run your workflow
+#  args:
+#    chdir: "/vol/spool"  # Change to the directory where your workflow resides
