--- a/resources/playbook/roles/bibigrid/tasks/025-nfs-worker.yaml
+++ b/resources/playbook/roles/bibigrid/tasks/025-nfs-worker.yaml
@@ -16,7 +16,7 @@
     state: directory
     owner: root
     group: root
-    mode: 0777
+    mode: "0o777"
   with_items:
     - "{{ nfs_mounts }}"
 
