fully working for permanent workers. masterMount is broken now, but also replaced. Will be fixed.

--- a/bibigrid.yaml
+++ b/bibigrid.yaml
@@ -84,6 +84,11 @@
   #    # bootFromVolume: True
   #    # terminateBootVolume: True
   #    # bootVolumeSize: 50
+  #    # attachVolumes:
+  #    # - mountPoint:
+  #    #   size: 50
+  #    #   fstype: ext4
+
 
   # Depends on cloud image
   sshUser: # for example ubuntu
