--- a/resources/playbook/roles/bibigrid/tasks/020-disk.yaml
+++ b/resources/playbook/roles/bibigrid/tasks/020-disk.yaml
@@ -35,6 +35,6 @@
     state: link
 
 - name: Automount
-  when: attachVolumes is defined
+  when: volumes is defined
   include_tasks: 020-disk-automount.yaml
   with_items: "{{ volumes }}"
