removed server automount. This is now handled by a single automount task for both master and workers

--- a/resources/playbook/roles/bibigrid/tasks/020-disk-server.yaml
+++ b/resources/playbook/roles/bibigrid/tasks/020-disk-server.yaml
@@ -19,5 +19,5 @@
 
 - name: Automount
   when: volumes is defined
-  include_tasks: 020-disk-server-automount.yaml
+  include_tasks: 020-disk-automount.yaml
   with_items: "{{ volumes }}"
