--- a/resources/playbook/roles/bibigrid/tasks/025-nfs-server.yaml
+++ b/resources/playbook/roles/bibigrid/tasks/025-nfs-server.yaml
@@ -3,7 +3,7 @@
     name: "nfs-kernel-server"
     state: present
 
-- name: Create export directories
+- name: Create shared directories
   file:
     path: "{{ item.src }}"
     state: directory
@@ -11,7 +11,7 @@
     group: root
     mode: "0o777"
   with_items:
-    - "{{ nfs_mounts }}"
+    - "{{ nfs_shares }}"
 
 - name: Configure nfs exports
   lineinfile:
@@ -24,6 +24,6 @@
     {{ '10.0.0.0/'+wireguard.mask_bits|default(24)|string + '(rw,nohide,insecure,no_subtree_check,async)'
     if wireguard is defined }}"
   with_items:
-    - "{{ nfs_mounts }}"
+    - "{{ nfs_shares }}"
   notify:
     - nfs-server
