--- a/bibigrid.yaml
+++ b/bibigrid.yaml
@@ -83,7 +83,7 @@
   # workerInstances:
   #  - type: # existing type/flavor from your cloud. See launch instance>flavor for options
   #    image: # same as master. Consider using regex to prevent image updates from breaking your running cluster
-  #    count: # number of workers you would like to create with set type, image combination
+  #    count: 1 # number of workers you would like to create with set type, image combination
   #    # features: # list
   #    # partitions: # list of slurm features that all nodes of this group have
   #    # bootVolume: # optional
@@ -91,12 +91,15 @@
   #    #   terminate: True # whether the volume is terminated on server termination
   #    #   size: 50
   #    # volumes: # optional
-  #    # - name: volumeName # empty for temporary volumes
+  #    # - name: volumeName # optional
   #    #   snapshot: snapshotName # optional; to create volume from a snapshot
-  #    #   mountPoint: /vol/mountPath
+  #    #   mountPoint: /vol/mountPath # optional; not mounted if no path is given
   #    #   size: 50
   #    #   fstype: ext4 # must support chown
   #    #   semiPermanent: False # if True volume is only deleted during cluster termination
+  #    #   permanent: False # if True volume is not deleted; overwrites semiPermanent if both are given
+  #    #   exists: False # if True looks for existing volume with exact name. count must be 1.
+  #    #   type: # storage type; available values depend on your location; for Bielefeld CEPH_HDD, CEPH_NVME
 
   # Depends on image
   sshUser: # for example 'ubuntu'
