--- a/resources/playbook/roles/bibigrid/tasks/020-disk-automount.yaml
+++ b/resources/playbook/roles/bibigrid/tasks/020-disk-automount.yaml
@@ -1,16 +1,19 @@
-- when: item.mount_point is defined
+- when: item.mountPoint is defined
   block:
     - name: Make sure disks are available
       failed_when: false
       filesystem:
-        fstype: ext4
+        fstype: "{{ item.fstype | default('ext4') }}"
         dev: "{{ item.device }}"
         force: false
         state: present
 
-    - name: Get the filesystem type of the device using lsblk
+    - name: Get volume filesystem using lsblk
       command: "lsblk -no FSTYPE {{ item.device }}"
       register: filesystem_type
+      until: filesystem_type.stdout != ""
+      retries: 5
+      delay: 2
       changed_when: false
 
     - name: Log the filesystem type
@@ -19,7 +22,7 @@
 
     - name: Create mount folders if they don't exist
       file:
-        path: "{{ item.mount_point }}"
+        path: "{{ item.mountPoint }}"
         state: directory
         mode: "0o755"
         owner: root
@@ -27,7 +30,7 @@
 
     - name: Mount disks
       mount:
-        path: "{{ item.mount_point }}"
+        path: "{{ item.mountPoint }}"
         src: "{{ item.device }}"
         state: mounted
         fstype: "{{ filesystem_type.stdout }}"
