added states and started changes for rest api

--- a/resources/playbook/roles/bibigrid/tasks/042-slurm.yaml
+++ b/resources/playbook/roles/bibigrid/tasks/042-slurm.yaml
@@ -20,7 +20,7 @@
 
 - name: Install slurm-bibigrid package
   apt:
-    name: slurm-bibigrid-24.11 # slurm-bibigrid
+    name: slurm-bibigrid-24.11
     state: present
 
 - name: Install Slurm package dependencies
