--- a/resources/playbook/roles/bibigrid/tasks/003-dns.yaml
+++ b/resources/playbook/roles/bibigrid/tasks/003-dns.yaml
@@ -19,21 +19,21 @@
     src: dns/hosts.j2
     dest: /etc/dnsmasq.hosts
     mode: "0o644"
-  notify: dnsmasq
+  notify: Dnsmasq
 
 - name: Adjust dnsmasq.resolv.conf
   template:
     src: dns/resolv.conf.j2
     dest: /etc/dnsmasq.resolv.conf
     mode: "0o644"
-  notify: dnsmasq
+  notify: Dnsmasq
 
 - name: Adjust dnsmasq conf
   template:
     src: dns/dnsmasq.conf.j2
     dest: /etc/dnsmasq.conf
     mode: "0o644"
-  notify: dnsmasq
+  notify: Dnsmasq
 
 - name: Flush handlers
   meta: flush_handlers
