--- a/resources/playbook/roles/bibigrid/tasks/030-docker.yaml
+++ b/resources/playbook/roles/bibigrid/tasks/030-docker.yaml
@@ -7,15 +7,15 @@
 - name: Configure Docker
   copy:
     content: |-
-             {
-                "mtu":{{ ansible_default_ipv4.mtu }}
-             }
+      {
+         "mtu":{{ ansible_default_ipv4.mtu }}
+      }
     dest: /etc/docker/daemon.json
     owner: root
     group: root
     mode: "0o644"
   notify:
-    docker
+    Docker
 
 - name: Create docker group and change GID
   group:
@@ -32,7 +32,7 @@
 
 - name: Install docker-api via PIP
   pip:
-    name: ['docker', 'docker-compose'] # reevaluate
+    name: [ 'docker', 'docker-compose' ] # reevaluate
 
 - name: (Re-)start docker socket
   systemd:
