- add support for Zabbix7 - use invidual  pyhton venv (instead of global one) - bump ansible version to 10.7, minor changes over some tasks

--- a/resources/playbook/roles/bibigrid/tasks/042-slurm-server.yaml
+++ b/resources/playbook/roles/bibigrid/tasks/042-slurm-server.yaml
@@ -154,7 +154,7 @@
     mode: "0o750"
 
 - name: Install python dependencies
-  pip:
+  ansible.builtin.pip:
     name:
       - python-openstackclient==6.0.0
       - openstacksdk==0.62.0
@@ -163,6 +163,7 @@
       - paramiko
       - ansible-runner
       - pyzabbix
+    virtualenv: /opt/bibigrid-venv
 
 - name: 'Add default user to ansible group'
   user:
