--- a/resources/playbook/roles/bibigrid/handlers/main.yml
+++ b/resources/playbook/roles/bibigrid/handlers/main.yml
@@ -35,9 +35,9 @@
     name: slurmd
     state: restarted
 
-- name: zabbix-agent
+- name: zabbix-agent2
   systemd:
-    name: zabbix-agent
+    name: zabbix-agent2
     state: restarted
 
 - name: zabbix-server
