--- a/resources/playbook/roles/bibigrid/tasks/001-apt.yaml
+++ b/resources/playbook/roles/bibigrid/tasks/001-apt.yaml
@@ -46,9 +46,9 @@
       - "python3-setuptools"
     state: "present"
 
-- name: Add zabbix repositories
+- name: Add zabbix repositories # noqa: line-length
   apt:
-    deb: "https://repo.zabbix.com/zabbix/7.0/ubuntu/pool/main/z/zabbix-release/zabbix-release_latest_7.0+{{ ansible_distribution | lower }}{{ ansible_distribution_version }}_all.deb" # noqa: line-length
+    deb: "https://repo.zabbix.com/zabbix/7.0/ubuntu/pool/main/z/zabbix-release/zabbix-release_latest_7.0+{{ ansible_distribution | lower }}{{ ansible_distribution_version }}_all.deb"
     state: present
     force: true
   tags:
