--- a/resources/playbook/roles/bibigrid/tasks/042-slurm-server.yaml
+++ b/resources/playbook/roles/bibigrid/tasks/042-slurm-server.yaml
@@ -1,3 +1,19 @@
+- name: Create system overrides directories (slurmctld)
+  file:
+    path: "/etc/systemd/system/slurmctld.service.d"
+    group: root
+    owner: root
+    mode: "0o755"
+    state: directory
+
+- name: Copy system overrides (slurmctld)
+  copy:
+    src: "slurm/systemd/slurmctld.override"
+    dest: "/etc/systemd/system/slurmctld.service.d/override.conf"
+    mode: "0o644"
+    owner: root
+    group: root
+
 - name: Change group ownership of OpenStack credentials file to slurm if it exists
   block:
     - name: Check if the OpenStack credentials file exists
@@ -191,10 +207,13 @@
     - slurmdbd
     - slurmrestd
 
-- name: Start slurm explicit after all dependencies are configured
+- name: Enable slurmctld service
   systemd:
-    name: slurmctld
+    name: "slurmctld"
+    enabled: true
+    masked: false
     state: started
+    daemon_reload: true
 
 
 - when: slurm_home.stdout != '/opt/slurm'
