--- a/resources/playbook/roles/bibigrid/tasks/011-zabbix-agent.yaml
+++ b/resources/playbook/roles/bibigrid/tasks/011-zabbix-agent.yaml
@@ -34,9 +34,10 @@
     dest: /usr/local/bin/zabbix_host_delete.py
     mode: "0o755"
 
-- name: Install zabbix python-api
-  pip:
+- name: Install zabbix python-api in BiBiGrid virtual environment
+  ansible.builtin.pip:
     name: zabbix-api
+    virtualenv: /opt/bibigrid-venv
 
 - name: Install zabbix agent2
   apt:
